--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <div class="header">
-        Header Logo
-        <div class="headerlinks">
+        <span class="header-logo">Header Logo</span>
+        <div class="header-links">
             <a href="#">header link one</a>
             <a href="#">header link two</a>
             <a href="#">header link three</a>
@@ -18,7 +19,7 @@
     <div class="main">
         <div class="one">
             <span class="hero">This website is awesome</span>
-            <span class="subtext">This website has some subtext that goes here 
+            <span class="hero-subtext">This website has some subtext that goes here 
                 under the main title. It's a smaller font and the color is 
                 lower contrast</span>
             <button class="signup">Sign up</button>
