--- a/index.html
+++ b/index.html
@@ -18,32 +18,38 @@
 
     <div class="main">
         <div class="one">
-            <span class="hero">This website is awesome</span>
-            <span class="hero-subtext">This website has some subtext that goes here 
-                under the main title. It's a smaller font and the color is 
-                lower contrast</span>
-            <button class="signup">Sign up</button>
+            <div class="one-left">
+                <span class="hero">This website is awesome</span>
+                <span class="hero-subtext">This website has some subtext that goes here 
+                    under the main title. It's a smaller font and the color is 
+                    lower contrast</span>
+                <button class="signup">Sign up</button>
+            </div>
             <div class="main-image">this is a placeholder for an image</div>
         </div>
+
         <div class="two">
             <span class="two-header">Some random information.</span>
-            <div class="img1">
-                <span class="img"></span>
-                this is some subtext under an illustration or image
-            </div>
-            <div class="img2">
-                <span class="img"></span>
-                this is some subtext under an illustration or image
-            </div>
-            <div class="img3">
-                <span class="img"></span>
-                this is some subtext under an illustration or image
-            </div>
-            <div class="img4">
-                <span class="img"></span>
-                this is some subtext under an illustration or image
+            <div class="images">
+                <div class="img-container">
+                    <span class="img"></span>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="img-container">
+                    <span class="img"></span>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="img-container">
+                    <span class="img"></span>
+                    this is some subtext under an illustration or image
+                </div>
+                <div class="img-container">
+                    <span class="img"></span>
+                    this is some subtext under an illustration or image
+                </div>
             </div>
         </div>
+
         <div class="three">
             <div class="quote">
                 This is an inspiring quote, or a testimonial from a customer. Maybe 
@@ -52,6 +58,7 @@
             </div>
             <span class="quote-attribution">-Thor, God of Thunder</span>
         </div>
+
         <div class="four">
             <div class="four-text">
                 <span class="call-to-action">Call to action! It's time!</span>
@@ -62,6 +69,7 @@
             </div>
             <button class="signup">Sign up</button>
         </div>
+
     </div>
 
     <div class="footer">
